--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,46 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <a class="navbar-brand" href="/">TaskMaster</a>
+    
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+
+
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li>
+          <a href="/items">All Tasks</a>
+        </li>
+        <li class="">
+          <a href="/items/items_for_sale">To-Dos</a>
+        </li>
+        <li>
+          <a href="/items/items_sold">Completed Tasks</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</div>
+
+
+<div class="add_top_margin container">
+  <div class="row">
+    <%= yield %>
+  </div>
+</div>
+
+
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
 </body>
 </html>
