--- a/app/views/to_dos/index.html.haml
+++ b/app/views/to_dos/index.html.haml
@@ -1,2 +1,27 @@
-- @to_dos.each do |t|
-	= render "form"
+.row
+  .col-lg-6.col-md-6.col-sm-6
+    %h1.title To-Dos
+  .col-lg-6.col-md-6.col-sm-6
+    = button_to "Add New To-Do", new_to_do_path, method: 'get', class: "add_button"
+
+.row
+  -unless @to_dos.empty?
+    - @to_dos.each do |to_do|
+      .col-lg-4.col-md-4.col-sm-4
+        .panel.panel-default.custom_panel
+
+          %h4.title= link_to to_do.task, "to_dos/#{to_do.id}", class: "title_link"
+          %br
+          = to_do.description
+          %br
+          = "Due date:"
+          = to_do.due_date
+          %br
+          = "Completed?"
+          = to_do.completed
+          
+          
+          %br
+          %br
+  -else
+    "There are no locations in the database."
