--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 <div class="container">
       <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <a class="navbar-brand" href="/">TaskMaster</a>
+    <a class="navbar-brand" href="/to_dos">TaskMaster</a>
     
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -25,14 +25,17 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li>
-          <a href="/items">All Tasks</a>
-        </li>
         <li class="">
-          <a href="/items/items_for_sale">To-Dos</a>
+          <a href="/to_dos">All-To-Dos</a>
         </li>
         <li>
-          <a href="/items/items_sold">Completed Tasks</a>
+          <a href="/to_dos/todolist">The ToDo List</a>
+        </li>
+        <li>
+          <a href="/to_dos/completed">Completed Tasks</a>
+        </li>
+        <li>
+          <a href="/assignees">Assignees</a>
         </li>
       </ul>
     </nav>
