--- a/app/views/to_dos/_form.html.haml
+++ b/app/views/to_dos/_form.html.haml
@@ -6,7 +6,7 @@
   = f.text_field :description, class: "form-control"
 
   = f.label :due_date
-  = f.text_field :due_date, class: "form-control"
+  = f.date_select :due_date, class: "form-control"
 
   = f.label :completed
   = f.text_field :completed, class: "form-control"
