--- a/app/views/to_dos/show.html.haml
+++ b/app/views/to_dos/show.html.haml
@@ -9,3 +9,8 @@
     %br
     = @to_do.completed
     %br
+    %p= link_to "Edit", edit_to_do_path, class: "btn btn-primary form-control"
+
+
+    / %p= link_to "Download Image", download_item_image_item_path, class: "btn btn-primary form-control"
+  
