--- a/app/views/assignees/show.html.haml
+++ b/app/views/assignees/show.html.haml
@@ -1,6 +1,5 @@
 .col-lg8.col-md-8.col-sm-8.col-sm-offset-2.col-md-offset-2.col-lg-offset-2
   .panel.panel-default.custom_panel.centered
-  = @to_do.task
-  = @to_do.description
-  = @to_do.due_date
-  = @to_do.completed
+    = @assignee.name
+    %br
+    = @assignee.email
