--- a/app/views/to_dos/edit.html.haml
+++ b/app/views/to_dos/edit.html.haml
@@ -2,3 +2,5 @@
   =render "form", f: f
 
   = f.submit "Edit"
+.col-sm-12
+  = button_to 'Delete this Item', to_do_path, method: "delete", data: { confirm: "Are you sure?" }, class: "btn btn-primary form-control"
