--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,11 @@
         <li>
           <a href="/assignees">Assignees</a>
         </li>
+         <li>
+          <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+            Search
+          </button>
+        </li>
       </ul>
     </nav>
   </div>
@@ -46,6 +51,31 @@
 <div class="add_top_margin container">
   <div class="row">
     <%= yield %>
+  </div>
+</div>
+
+<!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+
+
+        <%= render "search_form"%>
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
   </div>
 </div>
 
