added search; adjusted layout

--- a/app/views/assignees/index.html.haml
+++ b/app/views/assignees/index.html.haml
@@ -1,6 +1,6 @@
 .row
   .col-lg-6.col-md-6.col-sm-6
-    %h1.title New Assignee
+    %h1.title All Assignees
   .col-lg-6.col-md-6.col-sm-6
     = button_to "New Assignee", new_assignee_path, method: 'get', class: "add_button"
 
@@ -11,12 +11,13 @@
         .panel.panel-default.custom_panel
 
           %h4.title= link_to assignee.name, "assignees/#{assignee.id}", class: "Name"
-          %br
-          = "Email"
-          = assignee.email
-          %br
-          
-          %br
-          %br
+        
+          %p To-Do List
+          %ul
+            -assignee.to_dos.each do |task|
+
+              = check_box_tag "generic", 1, task.completed
+              = task.task
+              %br
   -else
     "There are no assignees in the database."
