--- a/app/views/to_dos/show.html.haml
+++ b/app/views/to_dos/show.html.haml
@@ -2,7 +2,7 @@
   .panel.panel-default.custom_panel.centered
     
     = @to_do.task
-    = @to_do.assignee.name
+    = @to_do.assignee
     %br
     = @to_do.description
     %br
