--- a/app/views/to_dos/_search_form.html.haml
+++ b/app/views/to_dos/_search_form.html.haml
@@ -1,11 +1,23 @@
 .col-lg-12.col-md-12.col-sm-12.panel.panel-default.custom_panel.search_box
-  %h4 Search
   = form_tag search_to_dos_path, method: "get" do
+   
+    %br
     Choose a category to search
-    = select_tag "search[type]", options_for_select([["Assignee Name", "1"], ["Yesterday's Tasks", "2"], ["Today's Tasks", "3"], ["This week's tasks", "4"], ["This month's tasks", "5"], ["Completed", "6"]])
+    = select_tag "search[type]", options_for_select([["Assignee Name", "1"], ["Yesterday's Tasks", "2"], ["Today's Tasks", "3"], ["This week's tasks", "4"], ["This month's tasks", "5"]])
     %br
     %br
     = text_field_tag "search[term]"
+    %br
+    %br
+    
+    = radio_button_tag "search[completed]", "yes"
+    Search completed tasks
+    = radio_button_tag "search[completed]", "no"
+    Search undone tasks
+    = radio_button_tag "search[completed]", "all", true
+    Search all tasks
+    %br
+    %br
     = submit_tag "Search"
 
 %br
