--- a/app/views/to_dos/index.html.haml
+++ b/app/views/to_dos/index.html.haml
@@ -5,14 +5,15 @@
     = button_to "Add New To-Do", new_to_do_path, method: 'get', class: "add_button"
 
 .row
-  -unless @to_dos.empty?
+  - if @to_dos.present?
     - @to_dos.each do |to_do|
       .col-lg-4.col-md-4.col-sm-4
         .panel.panel-default.custom_panel
 
           %h4.title= link_to to_do.task, "to_dos/#{to_do.id}", class: "title_link"
           %br
-          = to_do.assignee.name
+          -if to_do.assignee.present?
+            = to_do.assignee.name
           %br
           = to_do.description
           %br
