--- a/app/views/to_dos/search.html.haml
+++ b/app/views/to_dos/search.html.haml
@@ -5,12 +5,12 @@
     = button_to "Add New To-Do", new_to_do_path, method: 'get', class: "add_button"
 
 .row
-  -unless @to_dos.empty?
+  -unless @to_dos.nil?
     - @to_dos.each do |to_do|
       .col-lg-4.col-md-4.col-sm-4
         .panel.panel-default.custom_panel
 
-          %h4.title= link_to to_do.task, "to_dos/#{to_do.id}", class: "title_link"
+          %h4.title= link_to to_do.task, "/to_dos/#{to_do.id}", class: "title_link"
           %br
           = to_do.assignee.name
           %br
