--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
           <a href="/assignees">Assignees</a>
         </li>
          <li>
-          <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+          <button class="btn btn-primary btn-md adjust_button_position" data-toggle="modal" data-target="#myModal">
             Search
           </button>
         </li>
