--- a/app/views/to_dos/search.html.haml
+++ b/app/views/to_dos/search.html.haml
@@ -2,7 +2,7 @@
   .col-lg-6.col-md-6.col-sm-6
     %h1.title To-Dos
   .col-lg-6.col-md-6.col-sm-6
-    = button_to "Add New To-Do", new_to_do_path, method: 'get', class: "add_button"
+    = button_to "Add New To-Do", new_to_do_path, method: 'get', class: "add_button btn btn-success"
 
 .row
   -unless @to_dos.nil?
