--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,5 +15,50 @@
  @import "bootstrap";
  
  body {
-  margin-top: 80px;
+  margin-top: 60px;
  }
+
+ .adjust_button_position {
+  margin-top: 9px;
+  margin-left: 100px;
+ }
+
+ .add_button {
+  float: right;
+  margin-top: 5px;
+ }
+
+ .title {
+  margin-top: 0;
+ }
+
+ .adjust_glyph_position {
+  position: relative;
+  top: 3px;
+ }
+
+ .custom_delete_button {
+  float: right;
+ }
+
+ .custom_update_button {
+  float: left;
+  margin: 0;
+ }
+
+ .col-sm-6, .col-md-6 {
+  padding: 0;
+ }
+
+
+ @media (max-width: 760px) {
+  body {
+    padding-top: 0;
+  }
+
+  .add_button {
+    float: none;
+    position: relative;
+    margin-bottom: 20px;
+  }
+}
