--- a/app/views/to_dos/_form.html.haml
+++ b/app/views/to_dos/_form.html.haml
@@ -1,18 +1,29 @@
-.panel.panel-default.custom_panel.form-group
-	= f.label :task
-	= f.text_field :task, class: "form-control"
 
-	= f.label :description
-	= f.text_field :description, class: "form-control"
-
-	= f.label :due_date
-	= f.date_select :due_date, class: "form-control"
-	%br
-	
-	- if @to_do.present? 
-		= f.label :completed
-		= f.text_field :completed, class: "form-control"
-	
-	= f.label "Assign this task to:"
-	%br
-	= f.select :assignee_id, Assignee.all.collect {|d| [d.name, d.id] }
+.panel-info
+  .panel-heading
+    Edit To-Do
+  .form-group
+    %br
+    = f.label :task
+    = f.text_field :task, class: "form-control"
+    %br
+    = f.label :description
+    = f.text_field :description, class: "form-control"
+    %br
+    = f.label :due_date
+    = f.date_select :due_date, class: "form-control"
+    %br
+    
+    - if @to_do.present?
+      %br 
+      = f.label "Completed?"
+      %br
+      = radio_button_tag :completed, true, @to_do.completed
+      Yes
+      = radio_button_tag :completed, false, !@to_do.completed
+      No
+      %br
+      %br
+    = f.label "Assign this task to:"
+    %br
+    = f.select :assignee_id, Assignee.all.collect {|d| [d.name, d.id] }
