--- a/app/views/to_dos/edit.html.haml
+++ b/app/views/to_dos/edit.html.haml
@@ -1,6 +1,9 @@
-=form_for @to_do, url: to_do_path, action: "PUT" do |f|
-  =render "form", f: f
+.col-lg6.col-md-6.col-sm-6.col-sm-offset-3.col-md-offset-3.col-lg-offset-3
+  =form_for @to_do, url: to_do_path, action: "PUT" do |f|
+    =render "form", f: f
+    
 
-  = f.submit "Edit"
-.col-sm-12
-  = button_to 'Delete this Item', to_do_path, method: "delete", data: { confirm: "Are you sure?" }, class: "btn btn-primary form-control"
+    .col-lg6.col-md-6.col-sm-6
+      = f.submit "Update", class: "btn btn-primary custom_update_button"
+    .col-lg6.col-md-6.col-sm-6
+      = button_to 'Delete this Item', to_do_path, method: "delete", data: { confirm: "Are you sure?" }, class: "btn btn-danger custom_delete_button"
