--- a/app/views/assignees/show.html.haml
+++ b/app/views/assignees/show.html.haml
@@ -10,8 +10,12 @@
       %b Tasks
       %br
       - @assignee.to_dos.each do |task|
-        = check_box_tag "generic", 1, task.completed
         = task.task
+        = link_to "Completed?", change_completed_three_to_do_path(task), method: "patch"
+        - if task.completed
+          %span.glyphicon.glyphicon-ok.adjust_glyph_position
+        - else
+          %span.glyphicon.glyphicon-remove.adjust_glyph_position
         %br
     %p= link_to "Edit", edit_assignee_path, class: "btn btn-primary form-control"
 
