--- a/app/views/to_dos/index.html.haml
+++ b/app/views/to_dos/index.html.haml
@@ -9,7 +9,7 @@
       .col-lg-4.col-md-4.col-sm-4
         .panel.panel-info
 
-          .panel-heading= link_to to_do.task, "to_dos/#{to_do.id}", class: "title_link"
+          .panel-heading= link_to to_do.task, "/to_dos/#{to_do.id}", class: "title_link"
           .panel-body
             = "Assigned to:"
             -if to_do.assignee.present?
